# AdaptiveInCarVolumeControl

./: .gitignore  .gitlab-ci-build.yml  .gitlab-ci-staticAnalysis.yml  .gitlab-ci-ut.yml  .gitlab-ci.yml  .gitlab-ci_1.yml  Cargo.toml  README.md  memory.x  speedAPI.py  speedAPI1.py
.Cargo/: config.toml
.github/workflows/: ci.yml  rust.yml
docs/: noise2speed.md
src/: adaptive_gain.rs  audio.rs  audio_playback.rs  audio_playback2.rs  audio_playback3.rs  audio_playback4.rs  audio_playback5.rs  audio_playback6.rs  audio_playback6_test.rs  audio_playback6_test_2.rs  gain.rs  main.rs  playbackSimulation.rs  simulate.rs  test.rs
