[package]
name = "adaptive_vol"
version = "0.1.0"
edition = "2021"


[dependencies]
# core / runtime
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "1.0.0"


# HAL and RTIC
stm32f4xx-hal = { version = "0.23.0", features = ["stm32f407"] }
# [dependencies.stm32f4xx-hal]
# version = "0.23.0" # Use the desired version
# features = ["stm32f407", "rt"] # Replace `stm32f407` with your specific chip
rtic = { version = "2.2.0", features = ["cortex-m", "thumbv7-backend"] }


# Optional: logging over semihost/probe-rs RTT
defmt = { version = "1.0.1", optional = true }
libm = "0.2"


[features]
default = []


[profile.release]
codegen-units = 1
lto = true
